--- a/spotify-profile-demo/index.html
+++ b/spotify-profile-demo/index.html
@@ -19,6 +19,7 @@
       <li>Spotify URI: <a id="uri" href="#"></a></li>
       <li>Link: <a id="url" href="#"></a></li>
       <li>Profile Image: <span id="imgUrl"></span></li>
+      <li>followers: <span id="followers"></span></li>
     </ul>
   </section>
 </body>
