--- a/spotify-profile-demo/index.html
+++ b/spotify-profile-demo/index.html
@@ -14,12 +14,15 @@
     <h2>Logged in as <span id="displayName"></span></h2>
     <span id="avatar"></span>
     <ul>
-      <li>User ID: <span id="id"></span></li>
+
       <li>Email: <span id="email"></span></li>
       <li>Spotify URI: <a id="uri" href="#"></a></li>
       <li>Link: <a id="url" href="#"></a></li>
       <li>Profile Image: <span id="imgUrl"></span></li>
-      <li>followers: <span id="followers"></span></li>
+      <li>Followers: <span id="followers"></span></li>
+      <li>Country: <span id="country"></span></li>
+      <li>Product: <span id="product"></span></li>
+      <li>Type: <span id="type"></span></li>
     </ul>
   </section>
 </body>
