--- a/spotify-profile-demo/index.html
+++ b/spotify-profile-demo/index.html
@@ -19,14 +19,15 @@
     </div>
    <div class="profile-right">
     <ul>
-      <li>Email: <span id="email"></span></li>
-      <li>Spotify URI: <a id="uri" href="#"></a></li>
-      <li>Link: <a id="url" href="#"></a></li>
-      <li>Profile Image: <span id="imgUrl"></span></li>
-      <li>Followers: <span id="followers"></span></li>
-      <li>Country: <span id="country"></span></li>
-      <li>Product: <span id="product"></span></li>
-      <li>Type: <span id="type"></span></li>
+      <li><span class="description">Email:</span> <span id="email"></span></li>
+      <li><span class="description">Spotify URI:</span> <a id="uri" href="#"></a></li>
+      <li><span class="description">Link:</span> <a id="url" href="#"></a></li>
+      <li><span class="description">Profile Image:</span> <span id="imgUrl"></span></li>
+      <li><span class="description">Followers:</span> <span id="followers"></span></li>
+      <li><span class="description">Country:</span> <span id="country"></span></li>
+      <li><span class="description">Product:</span> <span id="product"></span></li>
+      <li><span class="description">Type:</span> <span id="type"></span></li>
+      
     </ul>
    </div>
     
