--- a/spotify-profile-demo/index.html
+++ b/spotify-profile-demo/index.html
@@ -33,7 +33,7 @@
     
   </section>
   
-    <h2 class="fav-songs-header">Favorite Songs</h2>
+    <h2 class="fav-songs-header">Top Favorite Songs</h2>
 
   <div class="songs">
     <div class="song-container" id="songContainer"></div>
