--- a/spotify-profile-demo/index.html
+++ b/spotify-profile-demo/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>My Spotify Profile</title>
   <script src="./src/script.ts" type="module"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
